[gd_scene load_steps=6 format=3 uid="uid://dxus87hdceyf3"]

[ext_resource type="Script" uid="uid://cxd77j8jtfnhi" path="res://scenes/tech/climbing_place.gd" id="1_4niga"]
[ext_resource type="Texture2D" uid="uid://bgvl3rlbg70nh" path="res://sprites/characters/overworld/spr_greg_climp.png" id="1_ulp76"]
[ext_resource type="AudioStream" uid="uid://cslof0ym068kr" path="res://sounds/gui/squelch.ogg" id="2_4niga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0i02j"]
resource_local_to_scene = true
size = Vector2(52, 52)

[sub_resource type="CircleShape2D" id="CircleShape2D_4niga"]
radius = 2.0

[node name="ClimbingPlace" type="Area2D"]
collision_layer = 128
collision_mask = 0
monitoring = false
script = ExtResource("1_4niga")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0i02j")
debug_color = Color(0.703641, 0.716196, 0.125455, 0.419608)

[node name="GregClimp" type="Node2D" parent="."]

[node name="GregClimpSprite" type="Sprite2D" parent="GregClimp"]
z_index = 1
position = Vector2(0, 6)
texture = ExtResource("1_ulp76")
offset = Vector2(0, -8)

[node name="ClimpSound" type="AudioStreamPlayer" parent="GregClimp/GregClimpSprite"]
stream = ExtResource("2_4niga")
volume_db = 6.0

[node name="Contact" type="Area2D" parent="GregClimp"]
z_index = 1
position = Vector2(0, -1)
collision_layer = 0
collision_mask = 128
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GregClimp/Contact"]
position = Vector2(-6, 2)
shape = SubResource("CircleShape2D_4niga")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GregClimp/Contact"]
position = Vector2(6, 2)
shape = SubResource("CircleShape2D_4niga")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="GregClimp/Contact"]
position = Vector2(2, 6)
shape = SubResource("CircleShape2D_4niga")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="GregClimp/Contact"]
position = Vector2(-2, 6)
shape = SubResource("CircleShape2D_4niga")
